Bug 1253928 - adjust the time passed to RequestVideoData() by the start time to avoid incorrectly skipping key frames. r=jya.

MozReview-Commit-ID: 9NHapIMoozG